@@ -1154,7 +1154,13 @@ See also {{msg-mw|difference}}.',
 'showhideselectedversions' => 'Text of the button which brings up the [[mw:RevisionDelete|RevisionDelete]] menu.',
 'editundo'                 => 'Undo link when viewing diffs
 {{Identical|Undo}}',
-'diff-multi'               => "This message appears in the revision history of a page when comparing two versions which aren't consecutive.",
+'diff-multi'               => "This message appears in the revision history of a page when comparing two versions which aren't consecutive.
+
+*Parameter $1 is the number of revisions
+*Parameter $2 is the number of users making those revisions",
+'diff-multi-manyuser'      => "This message appears in the revision history of a page when comparing two versions which aren't consecutive, and the intermediate revisions have been edited by 100+ users
+
+*$1 is the number of revisions, will always be 100 or more",
 
 # Search results
 'searchresults-title'            => 'Appears as page title in the html header of the search result special page.',
